--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ELearingManagementSystem">
+        <activity
+            android:name=".InstructorNavigationDrawer"
+            android:label="@string/title_activity_navigation_drawer"
+            android:theme="@style/Theme.ELearingManagementSystem.NoActionBar"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
