Created bottom navigation drawer for Students

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.e_learingmanagementsystem" >
+    package="com.example.e_learingmanagementsystem">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ELearingManagementSystem" >
-
+        android:theme="@style/Theme.ELearingManagementSystem">
+        <activity android:name=".StudentNavigationDrawer"></activity>
         <activity
             android:name=".InstructorNavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
             android:theme="@style/Theme.ELearingManagementSystem.NoActionBar" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
